# pydantic-enum

./: .coveragerc  .gitignore  .python-version  README.md  pyproject.toml  tox.ini
.github/workflows/: run-tests.yml
example/fastapi-enum/: pyproject.toml
example/fastapi-enum/src/fastapi_enum/: main.py
src/pydantic_enum/: base_model.py  check_version.py
tests/: test_base_model.py
