[project]
name = "pydantic-enum"
version = "0.1.0"
description = ""
authors = [
    {name = "Wilson Santos",email = "wilson.santos.dev87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=1.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pydantic_enum", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.7"
pyright = "^1.1.400"
pytest = "^8.3.5"
tox = "^4.25.0"


[tool.pylint.'MESSAGES CONTROL']
disable = """
    too-many-arguments,
    missing-module-docstring,
    missing-function-docstring,
    missing-class-docstring
"""

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
